# py-module-info

./: .gitignore  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: tests.yml
py_module_info/: __init__.py  _core.py  main.py
test/: test_class_info.py  test_function_info.py  test_import_info.py  test_main.py
