[metadata]
name = py-module-info
version = 0.1.0
description = get extra info about python modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adwaith-Rajesh/py-module-info
author = Adwaith-Rajesh
author_email = adwaithrajesh3180@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8.1

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
